Stepan's task 10 minor edit